--- a/index.html
+++ b/index.html
@@ -5,22 +5,60 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Solution Explorer</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   <style>
-    body { font-family: 'Segoe UI', sans-serif; }
-    header, footer { background-color: #002b5c; color: white; padding: 1.5rem 0; }
-    section { padding: 3rem 0; }
-    .section-title { margin-bottom: 2rem; }
+    body {
+      font-family: 'Poppins', sans-serif;
+    }
+    header, footer {
+      background: linear-gradient(90deg, #004080, #007bff);
+      color: white;
+      padding: 2.5rem 0;
+    }
+    .hero {
+      background: url('https://images.unsplash.com/photo-1556761175-129418cb2dfe') no-repeat center center/cover;
+      height: 70vh;
+      color: white;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      text-align: center;
+    }
+    .hero h1 {
+      font-size: 3rem;
+      font-weight: 700;
+      text-shadow: 2px 2px 8px #000;
+    }
+    .section-title {
+      font-weight: 600;
+      margin-bottom: 2rem;
+    }
+    section {
+      padding: 4rem 0;
+    }
+    .team-member img {
+      border-radius: 50%;
+      width: 120px;
+      height: 120px;
+      object-fit: cover;
+    }
   </style>
 </head>
 <body>
-  <header class="text-center">
-    <div class="container">
+  <header>
+    <div class="container text-center">
       <h1 class="display-5">SOLUTION EXPLORER</h1>
       <p>Transformamos ideias em soluções tecnológicas</p>
     </div>
   </header>
 
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <div class="hero">
+    <div class="container">
+      <h1>Soluções tecnológicas para um futuro melhor</h1>
+    </div>
+  </div>
+
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
     <div class="container">
       <a class="navbar-brand" href="#">Início</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
@@ -37,26 +75,30 @@
     </div>
   </nav>
 
-  <section id="sobre" class="bg-light">
+  <section id="sobre" class="bg-light text-center">
     <div class="container">
-      <h2 class="section-title text-center">Sobre Nós</h2>
-      <p>Somos uma equipe jovem com um propósito claro: oferecer soluções tecnológicas inovadoras e acessíveis. Atuamos nas áreas de desenvolvimento de sistemas de informação, assistência técnica, instalação e manutenção de hardware e software, segurança informática e recuperação de dados.</p>
+      <h2 class="section-title">Sobre Nós</h2>
+      <p class="lead">Somos uma equipe jovem com um propósito claro: oferecer soluções tecnológicas inovadoras e acessíveis. Atuamos nas áreas de desenvolvimento de sistemas de informação, assistência técnica, instalação e manutenção de hardware e software, segurança informática e recuperação de dados.</p>
+      <img src="https://images.unsplash.com/photo-1581090700227-1e8e939e493e" class="img-fluid mt-4 rounded" alt="Sobre nós">
     </div>
   </section>
 
-  <section id="servicos">
+  <section id="servicos" class="text-center">
     <div class="container">
-      <h2 class="section-title text-center">Serviços</h2>
+      <h2 class="section-title">Serviços</h2>
       <div class="row">
         <div class="col-md-4">
+          <img src="https://images.unsplash.com/photo-1526378722484-cc9d9b68542c" class="img-fluid mb-3 rounded" alt="Sistemas">
           <h5>Desenvolvimento de Sistemas</h5>
           <p>Criação de soluções sob medida para empresas e organizações.</p>
         </div>
         <div class="col-md-4">
+          <img src="https://images.unsplash.com/photo-1581090700227-1e8e939e493e" class="img-fluid mb-3 rounded" alt="Assistência">
           <h5>Assistência Técnica</h5>
           <p>Instalação, manutenção preventiva e corretiva de equipamentos.</p>
         </div>
         <div class="col-md-4">
+          <img src="https://images.unsplash.com/photo-1555435026-d0e1f54d2aeb" class="img-fluid mb-3 rounded" alt="Administração">
           <h5>Administração de Sistemas</h5>
           <p>Gerenciamento, auditoria e recuperação de dados em sistemas informáticos.</p>
         </div>
@@ -64,30 +106,33 @@
     </div>
   </section>
 
-  <section id="equipe" class="bg-light">
+  <section id="equipe" class="bg-light text-center">
     <div class="container">
-      <h2 class="section-title text-center">Nossa Equipe</h2>
-      <div class="row text-center">
-        <div class="col-md-4">
-          <h5>Túlio Benedito Nhantumbo</h5>
+      <h2 class="section-title">Nossa Equipe</h2>
+      <div class="row">
+        <div class="col-md-4 team-member">
+          <img src="https://randomuser.me/api/portraits/men/32.jpg" alt="Túlio">
+          <h5 class="mt-3">Túlio Benedito Nhantumbo</h5>
           <p>Fundador & Desenvolvedor Fullstack</p>
         </div>
-        <div class="col-md-4">
-          <h5>Kelven Mauro Machai</h5>
+        <div class="col-md-4 team-member">
+          <img src="https://randomuser.me/api/portraits/men/85.jpg" alt="Kelven">
+          <h5 class="mt-3">Kelven Mauro Machai</h5>
           <p>Suporte Técnico & Redes</p>
         </div>
-        <div class="col-md-4">
-          <h5>Cleyton Gerónimo de Madalena</h5>
+        <div class="col-md-4 team-member">
+          <img src="https://randomuser.me/api/portraits/men/23.jpg" alt="Cleyton">
+          <h5 class="mt-3">Cleyton Gerónimo de Madalena</h5>
           <p>Infraestrutura & Manutenção</p>
         </div>
       </div>
     </div>
   </section>
 
-  <section id="contato">
+  <section id="contato" class="text-center">
     <div class="container">
-      <h2 class="section-title text-center">Contato</h2>
-      <p class="text-center">Email: beneditotulio28@gmail.com | Tel: +258 860561204</p>
+      <h2 class="section-title">Contato</h2>
+      <p class="lead">Email: beneditotulio28@gmail.com | Tel: +258 860561204 | Tel: +258 840256149</p>
     </div>
   </section>
 
